Table usuarios {
    id int [pk, increment]
    name varchar(100)
    email varchar(100) [unique]
    password varchar(100)

    estado varchar(50) [default: `activo`]

    creado_en timestamp [default: `now()`]
    actualizado_en timestamp [default: `now()`]
    eliminado_en timestamp [default: `now()`]
}

Table clientes {
    id int [pk, increment]
    user_id int [ref: > usuarios.id]

    nombres varchar(100)
    apellidos varchar(100)
    tipo_documento varchar(50)
    numero_documento varchar(50) [unique]
    celular varchar(20)
    direccion varchar(200)
    fecha_nacimiento date
    genero varchar(20)
    foto_perfil varchar(255)
    contacto_nombre varchar(100)
    contacto_telefono varchar(20)
    contacto_relacion varchar(50)
    
    creando_en timestamp [default: `now()`]
    actualizado_en timestamp [default: `now()`]
    eliminado_en timestamp [default: `now()`]
}

Table categorias {
     id int [pk, increment]
     nombre varchar(100)
     
    creado_en timestamp [default: `now()`]
    actualizado_en timestamp [default: `now()`]
}

Table prestamos {
    id int [pk, increment]

    cliente_id int [ref: > clientes.id]
    categoria_id int [ref: > categorias.id]

    monto_prestado decimal(10,2)
    tasa_interes decimal(5,2)
    modalidad_pago varchar(50)
    modalidad_amortizacion varchar(50)
    nro_cuotas int
    monto_interes_total decimal(10,2)
    monto_total_a_pagar decimal(10,2)
    fecha_inicio date
    estado varchar(50) [default: 'pendiente']

    creado_en timestamp [default: `now()`]
    actualizado_en timestamp [default: `now()`]
}

Table pagos {
    id int [pk, increment]

    prestamo_id int [ref: > prestamos.id]
    fecha_vencimiento date
    saldo_capital decimal(10, 2)
    monto_capital decimal(10, 2)
    monto_interes decimal(10, 2)
    monto_cuota decimal(10, 2)
    metodo_pago varchar(50)
    referencia_pago varchar(100)
    fecha_cancelado date
    monto_total_pagado decimal(10, 2)
    estado varchar(50) [default: 'pendiente']

    creado_en timestamp [default: `now()`]
    actualizado_en timestamp [default: `now()`]
}

Table pago_parcials {
    id int [pk, increment]

    pago_id int [ref: > pagos.id]
    monto_total_de_la_cuota decimal(10,2)
    monto_pagado decimal(10,2)
    fecha_pago date
    detalle_pago varchar(255)

    creado_en timestamp [default: `now()`]
    actualizado_en timestamp [default: `now()`]
}